--- a/data/cards/yugipedia1048545.yaml
+++ b/data/cards/yugipedia1048545.yaml
@@ -1,21 +1,21 @@
 konami_id:
 password:
 name:
-  en: Deceiveblaster the Matchless Turret
+  en: Disablaster the Matchless Turret
   de:
   es:
   fr:
   it:
   pt:
-  ja: 無孔砲塔－ディセイブラスター
-  ja_romaji:
+  ja: <ruby>無<rt>む</rt></ruby><ruby>孔<rt>こう</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>塔<rt>とう</rt></ruby>－ディセイブラスター
+  ja_romaji: Mukō Hōtō - Diseiburasutā
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 text:
   en: |-
-    If there is a column with no cards, you can Special Summon this card (from your hand) to your zone in that column. You can only Special Summon "Deceiveblaster the Matchless Turret" once per turn this way. Negate all cards and effects activated in this card's column. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
+    If there is a column with no cards, you can Special Summon this card (from your hand) to that column. You can only Special Summon "Disablaster the Matchless Turret" once per turn this way. Negate all cards and effects activated in this card's column. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ pendulum_effect:
   zh-CN:
 images:
 - index: 1
-  image: DeceiveblastertheMatchlessTurret-INFO-JP-OP.png
+  image: DisablastertheMatchlessTurret-INFO-JP-OP.png
 sets:
   ja:
   - set_number: INFO-JP026
