--- a/data/cards/yugipedia1048548.yaml
+++ b/data/cards/yugipedia1048548.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: ＤＰＡジャンダムーア
-  ja_romaji:
+  ja: <ruby>Ｄ<rt>ディー</rt></ruby><ruby>Ｐ<rt>ピー</rt></ruby><ruby>Ａ<rt>エー</rt></ruby>ジャンダムーア
+  ja_romaji: Dī Pī Ē Jan Damūa
   ko:
   ko_rr:
   zh-TW:
@@ -32,6 +32,7 @@ attribute: FIRE
 level: 8
 atk: 2000
 def: 2800
+materials: 1 Tuner + 1 or more non-Tuner monsters
 images:
 - index: 1
   image: DPAJeannedMoore-INFO-JP-OP.png
