--- a/data/cards/yugipedia1048550.yaml
+++ b/data/cards/yugipedia1048550.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 異端なるフォボスコボス
-  ja_romaji:
+  ja: <ruby>異<rt>い</rt></ruby><ruby>端<rt>たん</rt></ruby>なるフォボスコボス
+  ja_romaji: Itannaru Fobosukobosu
   ko:
   ko_rr:
   zh-TW:
@@ -32,6 +32,7 @@ attribute: DARK
 rank: 4
 atk: 2100
 def: 1500
+materials: 2 Level 4 monsters
 images:
 - index: 1
   image: HereticalPhoboscobos-INFO-JP-OP.png
