--- a/data/cards/yugipedia1048545.yaml
+++ b/data/cards/yugipedia1048545.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>無<rt>む</rt></ruby><ruby>孔<rt>こう</rt></ruby><ruby>砲<rt>ほう</rt></ruby><ruby>塔<rt>とう</rt></ruby>－ディセイブラスター
-  ja_romaji: Mukō Hōtō - Diseiburasutā
+  ja_romaji: Mukōhōtō - Diseiburasutā
   ko:
   ko_rr:
   zh-TW:
