--- a/rush.yaml
+++ b/rush.yaml
@@ -60374,6 +60374,10 @@ sets:
     set_name: Rush Duel Card Game Gum
     rarities:
     - Normal Parallel Rare
+  - set_number: RD/ORP2-JP056
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/KP09-KRS01
     set_name: 'Deck Mod Pack: Galaxy of Fate!!'
@@ -90930,6 +90934,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk Yudias Version
     rarities:
     - Secret Rare
+  - set_number: RD/ORP2-JP057
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR02-KR004
     set_name: Secret Record Pack 2 Vol.2
