--- a/data/rush/16968.yaml
+++ b/data/rush/16968.yaml
@@ -34,7 +34,7 @@ atk: 1500
 def: 1200
 images:
 - index: 1
-  image: Takriminos-RDKP07-JP-R.png
+  image: Takriminos-RDB231-JP-C.png
 sets:
   ja:
   - set_number: RD/KP07-JP002
