--- a/data/cards/31213049.yaml
+++ b/data/cards/31213049.yaml
@@ -11,7 +11,7 @@ name:
   ja_romaji: Kurosu Ekusu Kurūjon
   ko: <ruby>XX<rt>크로스 엑스</rt></ruby> 클루전
   ko_rr: Keuroseu Ekseu Keullujeon
-  zh-TW:
+  zh-TW: XX排除
   zh-CN: XX排除
 text:
   en: |-
@@ -30,7 +30,8 @@ text:
     ①：相手が手札のモンスターの効果を発動した時に発動できる。その発動を無効にする。相手の手札がある場合、さらに相手は手札を１枚選んで捨てる。
   ko: |-
     ①: 상대가 패의 몬스터 효과를 발동했을 때에 발동할 수 있다. 그 발동을 무효로 한다. 상대의 패가 있을 경우, 추가로 상대는 패를 1장 고르고 버린다.
-  zh-TW:
+  zh-TW: |-
+    ①：可在對方手牌的怪獸發動效果時發動。將其發動變為無效。在對方有手牌的狀況下，對方另選擇１張手牌捨棄。
   zh-CN: |-
     ①：对手发动手牌的怪兽的效果的场合，使其发动无效。对手有手牌的场合，再使对手选1张手牌舍弃。
 card_type: Trap
@@ -98,3 +99,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
 yugipedia_page_id: 717528
+master_duel_rarity: SR
