--- a/rush.yaml
+++ b/rush.yaml
@@ -135260,6 +135260,68 @@ is_translation_unofficial:
     en: true
 yugipedia_page_id: 1037913
 ---
+konami_id: 20179
+name:
+  en: Sky Emperor Minion
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: スカイエンペラー・ミニオン
+  ja_romaji: Sukai Enperā Minion
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    このカードを召喚したターンに発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 4 cards of your Deck. You can add 1 excavated "Space Yggdrago" or 1 excavated Cyberse Type Maximum Monster to your hand. Place the remaining cards on the top of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分のデッキの上からカードを４枚めくり、お互いに確認する。自分はその中から「スペース・ユグドラゴ」またはマキシマムモンスター（サイバース族）１体を選んで手札に加える事ができる。残りのカードを好きな順番でデッキの上に戻す。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: LIGHT
+level: 3
+atk: 1000
+def: 100
+images:
+- index: 1
+  image: SkyEmperorMinion-RDSJMP-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP038
+    set_name: Saikyō Jump May 2024 promotional card
+    rarities:
+    - Normal Parallel Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1046291
+---
 konami_id:
 name:
   en: All Love Goddess
@@ -138195,66 +138257,6 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1046287
----
-konami_id:
-name:
-  en: Sky Emperor Minion
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: スカイエンペラー・ミニオン
-  ja_romaji: Sukai Enperā Minion
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    During the turn you Normal Summoned this card.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Excavate the top 4 cards of your Deck. You can add 1 excavated "Space Yggdrago" or 1 excavated Cyberse Type Maximum Monster to your hand. Place the remaining cards on the top of your Deck in any order.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Cyberse / Effect
-attribute: LIGHT
-level: 3
-atk: 1000
-def: 100
-images:
-- index: 1
-  image: SkyEmperorMinion-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP038
-    set_name: Saikyō Jump May 2024 promotional card
-    rarities:
-    - Normal Parallel Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
-yugipedia_page_id: 1046291
 ---
 konami_id:
 name:
