--- a/rush.yaml
+++ b/rush.yaml
@@ -131815,6 +131815,10 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
+  - set_number: RD/BDG8-JP001
+    set_name: Yu-Gi-Oh! GO RUSH!! Duel-8 Blu-ray & DVD promotional card
+    rarities:
+    - Ultra Parallel Rare
 is_translation_unofficial:
   name:
     en: true
@@ -139717,6 +139721,126 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1044920
+---
+konami_id:
+name:
+  en: Cybersepice Cumin
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サイバースパイス・クミン
+  ja_romaji: Saibāsupaisu Kumin
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 3
+atk: 900
+def: 300
+series:
+- Cybersepice
+images:
+- index: 1
+  image: CybersepiceCumin-OW.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP0??
+    set_name: Burst Rex of Awakening
+    rarities:
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1046111
+---
+konami_id:
+name:
+  en: Wheatcloth Demeter
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ウィトクロース・デメテル
+  ja_romaji: Witokurōsu Demeteru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    (TBA)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: FIRE
+level: 7
+atk: 2200
+def: 0
+images:
+- index: 1
+  image: WheatclothDemeter-OW.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP0??
+    set_name: Burst Rex of Awakening
+    rarities:
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1050669
 ---
 konami_id:
 name:
