--- a/data/cards/74213995.yaml
+++ b/data/cards/74213995.yaml
@@ -34,7 +34,7 @@ series:
 - Battleguard
 images:
 - index: 1
-  image: Back-EN.png
+  image: BattleguardEchoes-LEDE-EN-SR-1E.png
 sets:
   en:
   - set_number: LEDE-EN082
@@ -62,6 +62,6 @@ sets:
     rarities:
     - Super Rare
 limit_regulation:
-  tcg:
+  tcg: Not yet released
   ocg: Not yet released
 yugipedia_page_id: 1054853
