--- a/data/cards/82570174.yaml
+++ b/data/cards/82570174.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>燦<rt>さん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>昇<rt>しょう</rt></ruby><ruby>龍<rt>りゅう</rt></ruby>バイデント・ドラギオン
-  ja_romaji: Sangen Shōryū Baidento Doragion
+  ja_romaji: Sangenshōryū Baidento Doragion
   ko: 찬환승룡 바이덴트 드라기온
   ko_rr:
   zh-TW:
