--- a/data/cards/yugipedia1053412.yaml
+++ b/data/cards/yugipedia1053412.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: <ruby>燦<rt>さん</rt></ruby><ruby>幻<rt>げん</rt></ruby><ruby>開<rt>カイ</rt></ruby><ruby>花<rt>ホウ</rt></ruby>
-  ja_romaji: Sangenkaihou
+  ja_romaji: Sangen Kaihou
   ko:
   ko_rr:
   zh-TW:
