--- a/rush.yaml
+++ b/rush.yaml
@@ -142317,3 +142317,199 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1055194
+---
+konami_id:
+name:
+  en: Advance Form
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アドバンス・フォーム
+  ja_romaji: Adobansu Fōmu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send up to 2 cards from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle monsters from your opponent's Graveyard into the Deck equal to [the number of cards sent to the Graveyard to meet the requirement]. Then, you can add 1 "Advance Impact" or 1 "Emperor Realm" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 4
+atk: 800
+def: 1000
+images:
+- index: 1
+  image: AdvanceForm-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP032
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1055260
+---
+konami_id:
+name:
+  en: Royal Wisdom Guards
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>賢<rt>けん</rt></ruby><ruby>帝<rt>てい</rt></ruby><ruby>近<rt>この</rt></ruby><ruby>衛<rt>え</rt></ruby><ruby>兵<rt>へい</rt></ruby>
+  ja_romaji: Kentei Konoehei
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 10 or more cards in your Deck, shuffle 4 monsters with 1000 DEF from your Graveyard into the Deck, except monsters with 1200 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card. Then, increase this card's Level by 2 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Cyberse / Effect
+attribute: DARK
+level: 3
+atk: 1200
+def: 1000
+series:
+- Monarch
+images:
+- index: 1
+  image: RoyalWisdomGuards-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP031
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1055262
+---
+konami_id:
+name:
+  en: God Maju Garzett
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>神<rt>ゴッド</rt></ruby><ruby>魔<rt>ま</rt></ruby><ruby>獣<rt>じゅう</rt></ruby> ガーゼット
+  ja_romaji: Goddo Majū Gāzetto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 3 Effect Monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the total original ATK of the Effect Monsters Tributed for its Tribute Summon in Attack Position]. This card that was Normal Summoned by Tributing 3 monsters gains 800 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 8
+atk: 0
+def: 0
+images:
+- index: 1
+  image: GodMajuGarzett-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP043
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1055306
