--- a/data/cards/68468459.yaml
+++ b/data/cards/68468459.yaml
@@ -43,6 +43,10 @@ def: 0
 images:
 - index: 1
   image: FallenofAlbaz-RA01-EN-SR-1E.png
+  illustration: FallenofAlbaz-MADU-EN-VG-artwork.png
+- index: 2
+  image: FallenofAlbaz-CF01-JP-OP.png
+  illustration: FallenofAlbaz-OW-2.png
 sets:
   en:
   - set_number: ROTD-EN011
@@ -208,6 +212,10 @@ sets:
     set_name: 'Complete File: Story of White'
     rarities:
     - Ultra Rare
+  - set_number: CF01-JPS01
+    set_name: 'Complete File: Story of White'
+    rarities:
+    - Quarter Century Secret Rare
   ko:
   - set_number: ROTD-KR011
     set_name: Rise of the Duelist
