--- a/data/rush/18681.yaml
+++ b/data/rush/18681.yaml
@@ -79,6 +79,8 @@ materials:
 images:
 - index: 1
   image: FiveHeadedDragon-RDLGP1-JP-UR.png
+- index: 2
+  image: FiveHeadedDragon-RDKP17-JP-OP.png
 sets:
   ja:
   - set_number: RD/LGP1-JP001
@@ -86,6 +88,10 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  - set_number: RD/KP17-JP000
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/LGP1-KR001
     set_name: Legend Awakening Pack
