--- a/data/rush/yugipedia1054598.yaml
+++ b/data/rush/yugipedia1054598.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Level 5 or lower DARK Attribute Galaxy Type monster with 1300 DEF in your hand.
+    Reveal 1 Level 5 or lower DARK Attribute Galaxy Type monster with 1300 DEF in your hand to your opponent.
   de:
   es:
   fr:
