--- a/data/cards/yugipedia1055329.yaml
+++ b/data/cards/yugipedia1055329.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN:
 text:
   en: |-
-    [...] "Memento" monsters
-    You can banish this card from your GY; add 1 "Mementomictlan" from your Deck to your hand. You cannot activate the following effects of "Mementomictlan Tecuhtlica - Combined Conqueror" in the same Chain. If this card is Fusion Summoned: You can send [...] "Memento" card from your Deck or Extra Deck to the GY. (Quick Effect): You can target an equal number of "Memento" monsters you control and cards your opponent controls; destroy them. You can only use each effect of "Mementomictlan Tecuhtlica - Combined Conqueror" once per turn.
+    3 "Memento" monsters
+    You can banish this card from your GY; add 1 "Mementomictlan" from your Deck to your hand. You cannot activate the following effects of "Mementomictlan Tecuhtlica - Combined Conqueror" in the same Chain. If this card is Fusion Summoned: You can send 3 "Memento" cards from your Deck and/or Extra Deck to the GY. (Quick Effect): You can target an equal number of "Memento" monsters you control and cards your opponent controls; destroy them. You can only use each effect of "Mementomictlan Tecuhtlica - Combined Conqueror" once per turn.
   de:
   es:
   fr:
