--- a/rush.yaml
+++ b/rush.yaml
@@ -142523,3 +142523,129 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1055306
+---
+konami_id:
+name:
+  en: Dice Key Ribbon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダイスキー・リボン
+  ja_romaji: Daisukī Ribon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send this face-up card from your field to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Dice Key Mekuru" or 1 LIGHT Attribute monster with an effect that requires a die roll from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 6
+atk: 800
+def: 800
+series:
+- Dice
+images:
+- index: 1
+  image: DiceKeyRibbon-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP012
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1055484
+---
+konami_id:
+name:
+  en: Dice Key Mekuru
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ダイスキー・メクル
+  ja_romaji: Daisukī Mekuru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Excavate the top 6 cards of your Deck. You can add 1 excavated "Dice Key Ribbon" or LIGHT Attribute monster with an effect that requires a die roll to your hand. Place the remaining cards on the bottom of your Deck in any order.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 1
+atk: 100
+def: 100
+series:
+- Dice
+images:
+- index: 1
+  image: DiceKeyMekuru-RDKP17-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP17-JP010
+    set_name: Burst Rex of Awakening
+    rarities:
+    - Super Rare
+    - Secret Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1055486
