--- a/data/cards/77765207.yaml
+++ b/data/cards/77765207.yaml
@@ -56,6 +56,8 @@ text:
     ●从牌组将１张“百夫骑”魔法・陷阱卡放置在自己场上。
 card_type: Spell
 property: Quick-Play
+series:
+- Emblema
 images:
 - index: 1
   image: EmblemaOath-VASM-EN-UR-1E.png
