--- a/data/rush/16896.yaml
+++ b/data/rush/16896.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 9 LIGHT Attribute monster or 1 face-up LIGHT Attribute Normal Monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 1000 ATK until the end of this turn, if you have "Imaginary Actor" in your Graveyard.
+    1 face-up Level 9 LIGHT Attribute monster or 1 face-up LIGHT Attribute Normal Monster on your field gains 500 ATK until the end of this turn. Then, it gains additional 1000 ATK until the end of this turn if you have "Imaginary Actor" in your Graveyard.
   de:
   es:
   fr:
