--- a/data/rush/17543.yaml
+++ b/data/rush/17543.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Draw until you have 5 cards in your hand and reveal all cards in your hand to your opponent. If a monster(s) is among them, gain LP equal to [the number of those monsters] x 200.
+    Draw until you have 5 cards in your hand and reveal your entire hand to your opponent. If a monster(s) is among them, gain LP equal to [the number of those monsters] x 200.
   de:
   es:
   fr:
