--- a/data/cards/33099732.yaml
+++ b/data/cards/33099732.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN:
 text:
   en: |-
-    You can activate 1 of these effects (but you can only use each effect of "Over Future Fusion" once per turn);
-    ● Reveal 1 Fusion Monster in your Extra Deck and send 1 of the Fusion Materials mentioned on it by name from your Deck to the GY, and if you do, you cannot Special Summon monsters with that name, nor activate their monster effects, for the rest of this turn.
+    You can activate 1 of these effects (but you can only use each effect of "Overload Future Fusion" once per turn);
+    ● Reveal 1 Fusion Monster in your Extra Deck and send 1 material whose name is mentioned on it from your Deck to the GY, but for the rest of this turn, you cannot Special Summon, nor activate the effects of, monsters with the same name as the one sent to the GY by this effect.
     ● Fusion Summon 1 DARK Machine Fusion Monster from your Extra Deck, by banishing its materials from your GY.
   de:
   es:
@@ -49,7 +49,5 @@ limit_regulation:
   ocg: Unlimited
 is_translation_unofficial:
   name:
-    en: true
-  text:
     en: true
 yugipedia_page_id: 936649
