--- a/data/cards/40771118.yaml
+++ b/data/cards/40771118.yaml
@@ -38,7 +38,11 @@ card_type: Trap
 property: Continuous
 images:
 - index: 1
+  image: SentenceofDoom-DP22-JP-R.png
+  illustration: SentenceofDoom-MADU-JP-VG-artwork.png
+- index: '1.1'
   image: SentenceofDoom-LDS3-EN-C-1E.png
+  illustration: SentenceofDoom-MADU-EN-VG-artwork.png
 sets:
   en:
   - set_number: LED5-EN005
