--- a/data/cards/yugipedia1048722.yaml
+++ b/data/cards/yugipedia1048722.yaml
@@ -35,7 +35,7 @@ images:
   image: MaidenofBlueTears-DP29-JP-OP.png
 sets:
   ja:
-  - set_number: DP29-JP0??
+  - set_number: DP29-JP042
     set_name: 'Duelist Pack: Duelists of Brilliance'
     rarities:
 limit_regulation:
@@ -47,3 +47,4 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1048722
+fake_password: 100437042
