--- a/data/rush/yugipedia1044906.yaml
+++ b/data/rush/yugipedia1044906.yaml
@@ -58,7 +58,9 @@ series:
 - Cybersepice
 images:
 - index: 1
-  image: CybersepiceNutmeg-RDKP17-JP-OP.png
+  image: CybersepiceNutmeg-RDKP17-JP-SR.png
+- index: 2
+  image: CybersepiceNutmeg-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP018
