--- a/data/rush/yugipedia1044915.yaml
+++ b/data/rush/yugipedia1044915.yaml
@@ -46,13 +46,14 @@ series:
 - Straynge Cat
 images:
 - index: 1
-  image: StrayngeCatWitch-RDKP17-JP-OP.png
+  image: StrayngeCatWitch-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP007
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
