--- a/data/rush/yugipedia1044918.yaml
+++ b/data/rush/yugipedia1044918.yaml
@@ -42,7 +42,9 @@ series:
 - Hybridrive
 images:
 - index: 1
-  image: HybridriveBackFusion-RDKP17-JP-OP.png
+  image: HybridriveBackFusion-RDKP17-JP-SR.png
+- index: 2
+  image: HybridriveBackFusion-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP052
