--- a/data/rush/yugipedia1048511.yaml
+++ b/data/rush/yugipedia1048511.yaml
@@ -42,13 +42,14 @@ series:
 - Cybersepice
 images:
 - index: 1
-  image: SpiceCrossMix-RDKP17-JP-OP.png
+  image: SpiceCrossMix-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP055
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
