--- a/data/rush/yugipedia1051262.yaml
+++ b/data/rush/yugipedia1051262.yaml
@@ -58,7 +58,9 @@ series:
 - Sevens Road
 images:
 - index: 1
-  image: SevensRoadUltimaWitch-RDKP17-JP-OP.png
+  image: SevensRoadUltimaWitch-RDKP17-JP-UR.png
+- index: 2
+  image: SevensRoadUltimaWitch-RDKP17-JP-ORR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP045
