--- a/data/rush/yugipedia1054731.yaml
+++ b/data/rush/yugipedia1054731.yaml
@@ -42,7 +42,9 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: DragonicDomination-RDKP17-JP-OP.png
+  image: DragonicDomination-RDKP17-JP-SR.png
+- index: 2
+  image: DragonicDomination-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP064
