--- a/data/rush/yugipedia1055306.yaml
+++ b/data/rush/yugipedia1055306.yaml
@@ -60,13 +60,14 @@ series:
 - Garzett
 images:
 - index: 1
-  image: GodMajuGarzett-RDKP17-JP-OP.png
+  image: GodMajuGarzett-RDKP17-JP-R.png
 sets:
   ja:
   - set_number: RD/KP17-JP043
     set_name: Burst Rex of Awakening
     rarities:
     - Rare
+    - Secret Rare
 is_translation_unofficial:
   name:
     en: true
