--- a/data/rush/yugipedia1055800.yaml
+++ b/data/rush/yugipedia1055800.yaml
@@ -42,7 +42,9 @@ series:
 - JAM
 images:
 - index: 1
-  image: JAMPCatch-RDKP17-JP-OP.png
+  image: JAMPCatch-RDKP17-JP-SR.png
+- index: 2
+  image: JAMPCatch-RDKP17-JP-ScR-AA.png
 sets:
   ja:
   - set_number: RD/KP17-JP063
