--- a/data/rush/16956.yaml
+++ b/data/rush/16956.yaml
@@ -34,7 +34,7 @@ atk: 1800
 def: 1600
 materials:
   en: |-
-    "Flame Manipulator (Rush Duel)" + "Masaki the Legendary Swordsman (Rush Duel)"
+    "Flame Manipulator" + "Masaki the Legendary Swordsman"
   de:
   es:
   fr:
