--- a/data/rush/19929.yaml
+++ b/data/rush/19929.yaml
@@ -33,7 +33,7 @@ atk: 2300
 def: 2000
 materials:
   en: |-
-    "Winged Dragon, Guardian of the Fortress 1" + "Fairy Dragon"
+    "Winged Dragon, Guardian of the Fortress #1" + "Fairy Dragon"
   de:
   es:
   fr:
