--- a/rush.yaml
+++ b/rush.yaml
@@ -30086,7 +30086,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Place 2 Level 7 or higher Warrior Type monsters with different names from your Graveyard on the bottom of your Deck in any order.
+    Place 2 Level 7 or higher Warrior monsters with different names from your Graveyard on the bottom of the Deck in any order.
   de:
   es:
   fr:
@@ -30100,7 +30100,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 or higher Warrior Type monster from your Graveyard face-up to your field.
+    Special Summon 1 Level 7 or higher Warrior monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -30132,9 +30132,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715385
 ---
 konami_id: 16330
@@ -31225,7 +31222,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 face-up Psychic Type monster from your field to the Graveyard.
+    Send 1 face-up Psychic monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -31239,7 +31236,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 7 Psychic Type monster from your hand face-up to your field. If you sent "CAN:D" to the Graveyard to meet the requirement, the monster Special Summoned by this effect gains 1500 ATK until the end of this turn.
+    Special Summon 1 Level 7 Psychic monster from your hand face-up to your field. If you sent "CAN:D" to the Graveyard to meet the requirement, the monster Special Summoned by this effect gains 1500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -31274,9 +31271,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715452
 ---
 konami_id: 16346
@@ -31556,7 +31550,7 @@ yugipedia_page_id: 717389
 ---
 konami_id: 16350
 name:
-  en: The Menacing Eyes of the Sky Emperor
+  en: Mighty Gaze of the Sky Emperor
   de:
   es:
   fr:
@@ -31600,7 +31594,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: TheMenacingEyesoftheSkyEmperor-RDKP05-JP-SR.png
+  image: MightyGazeoftheSkyEmperor-RDKP05-JP-SR.png
 sets:
   ja:
   - set_number: RD/KP05-JP044
@@ -31612,11 +31606,6 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717077
 ---
 konami_id: 16351
@@ -33740,9 +33729,6 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714744
 ---
 konami_id: 16574
@@ -33826,9 +33812,6 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714743
 ---
 konami_id: 16575
@@ -33899,9 +33882,6 @@ sets:
     rarities:
     - Ultra Rare
     - Rush Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714745
 ---
 konami_id: 16576
@@ -34414,7 +34394,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 face-up Dinosaur Type monster from your field to the Graveyard.
+    Send 1 face-up Dinosaur monster from your field to the Graveyard.
   de:
   es:
   fr:
@@ -34428,7 +34408,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 5 or higher Dinosaur Type monster from your hand face-up to your field. It gains ATK equal to [the original Level of the monster sent to the Graveyard to meet the requirement] x 100 until the end of this turn.
+    Special Summon 1 Level 5 or higher Dinosaur monster from your hand face-up to your field. It gains ATK equal to [the original Level of the monster sent to the Graveyard to meet the requirement] x 100 until the end of this turn.
   de:
   es:
   fr:
@@ -34456,9 +34436,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714307
 ---
 konami_id: 16585
@@ -34477,7 +34454,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have a face-up Level 7 or higher Dinosaur Type monster on your field, send 1 card from your hand to the Graveyard.
+    If you have a face-up Level 7 or higher Dinosaur monster on your field, send 1 card from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -34519,9 +34496,6 @@ sets:
     set_name: Maximum Ultra Evolution Pack
     rarities:
     - Super Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 714577
 ---
 konami_id: 16586
@@ -38463,7 +38437,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 Machine Type monster from your hand to the Graveyard.
+    Send 1 Machine monster from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -38533,16 +38507,11 @@ sets:
     set_name: Versus Pack Maximum Force
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714363
 ---
 konami_id: 16687
 name:
-  en: Assault Armato
+  en: Assault Cannon
   de:
   es:
   fr:
@@ -38556,7 +38525,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    If you have 3 face-up Machine Type monsters on your field, send the top card of your Deck to the Graveyard.
+    If you have 3 face-up Machine monsters on your field, send the top card of your Deck to the Graveyard.
   de:
   es:
   fr:
@@ -38590,7 +38559,7 @@ atk: 1200
 def: 600
 images:
 - index: 1
-  image: AssaultArmato-RDGRD2-JP-C.png
+  image: AssaultCannon-RDGRD2-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP031
@@ -38610,11 +38579,6 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 713253
 ---
 konami_id: 16688
@@ -40776,7 +40740,7 @@ yugipedia_page_id: 713500
 ---
 konami_id: 16720
 name:
-  en: Eternal Freeze
+  en: Forever Freeze
   de:
   es:
   fr:
@@ -40820,7 +40784,7 @@ card_type: Trap
 property: Normal
 images:
 - index: 1
-  image: EternalFreeze-RDSD0A-JP-C.png
+  image: ForeverFreeze-RDSD0A-JP-C.png
 sets:
   ja:
   - set_number: RD/KP06-JP064
@@ -40840,11 +40804,6 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 714814
 ---
 konami_id: 16721
@@ -52907,7 +52866,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Send 1 Machine Type Effect Monster from your hand to the Graveyard.
+    Send 1 Machine Effect Monster from your hand to the Graveyard.
   de:
   es:
   fr:
@@ -52921,7 +52880,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 Machine Type Normal Monster from your Graveyard to your hand. Then, if your opponent has 3 Attack Position monsters on their field, you can Special Summon 1 Normal Monster from your hand face-up to your field.
+    Add 1 Machine Normal Monster from your Graveyard to your hand. Then, if your opponent has 3 Attack Position monsters on their field, you can Special Summon 1 Normal Monster from your hand face-up to your field.
   de:
   es:
   fr:
@@ -52957,11 +52916,6 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717300
 ---
 konami_id: 17198
@@ -54843,9 +54797,6 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 715494
 ---
 konami_id: 17225
@@ -67736,11 +67687,6 @@ sets:
     set_name: Go Rush Deck - Jointech Attack
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 717245
 ---
 konami_id: 17595
@@ -84826,7 +84772,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    You have 2 or more face-up Psychic Type monsters on your field, including a Normal Monster.
+    You have 2 or more face-up Psychic monsters on your field, including a Normal Monster.
   de:
   es:
   fr:
@@ -84870,11 +84816,6 @@ sets:
     set_name: 'Deck Mod Pack: Fortissimo of the Whirlwinds!!'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 715449
 ---
 konami_id: 18287
@@ -102382,9 +102323,6 @@ sets:
     rarities:
     - Super Rare
     - Secret Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 806120
 ---
 konami_id: 18787
@@ -105076,7 +105014,7 @@ yugipedia_page_id: 932331
 ---
 konami_id: 18961
 name:
-  en: Manifestation Master Dortheo
+  en: Summoning Sorcerer Doretheo
   de:
   es:
   fr:
@@ -105104,7 +105042,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 2 cards of your Deck to the Graveyard. Then, you can inflict damage to your opponent equal to [the number of Spellcaster Type monsters sent to the Graveyard by this effect] x 300.
+    Send the top 2 cards of your Deck to the Graveyard. Then, you can inflict damage to your opponent equal to [the number of Spellcaster monsters sent to the Graveyard by this effect] x 300.
   de:
   es:
   fr:
@@ -105124,7 +105062,7 @@ atk: 2500
 def: 1600
 images:
 - index: 1
-  image: ManifestationMasterDortheo-RDKP13-JP-C.png
+  image: SummoningSorcererDoretheo-RDKP13-JP-C.png
 sets:
   ja:
   - set_number: RD/KP13-JP032
@@ -105136,11 +105074,6 @@ sets:
     set_name: Oblivion of the Flash
     rarities:
     - Common
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 930090
 ---
 konami_id: 18962
@@ -115977,7 +115910,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Negate the attack. Your opponent cannot declare an attack this turn.
+    Negate the attack. This turn, your opponent cannot declare an attack.
   de:
   es:
   fr:
@@ -116012,9 +115945,6 @@ sets:
     set_name: Phoenix of the Roaring Flame
     rarities:
     - Rare
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 994285
 ---
 konami_id: 19343
@@ -116288,7 +116218,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card's name becomes "Blue-Eyes White Dragon", and gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+    This turn, this card's name becomes "Blue-Eyes White Dragon" and it gains 500 ATK. Then, if you have a face-up Legend Normal Monster on your field, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
   de:
   es:
   fr:
@@ -116334,11 +116264,6 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1004313
 ---
 konami_id: 19425
@@ -116598,7 +116523,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase that you Normal Summoned or Special Summoned this card, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
+    During your Main Phase that you Normal or Special Summoned this card, send 2 face-up Level 4 or lower Effect Monsters from your field to the Graveyard.
   de:
   es:
   fr:
@@ -116612,7 +116537,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 8 LIGHT Attribute Dragon Type monster from your Graveyard face-up to your field. Your Level 7 or lower monsters cannot attack this turn.
+    Special Summon 1 Level 8 LIGHT Attribute Dragon monster from your Graveyard face-up to your field. This turn, your Level 7 or lower monsters cannot attack.
   de:
   es:
   fr:
@@ -116654,11 +116579,6 @@ sets:
     set_name: 'Structure Deck: The Ultimate Blue-Eyed Legend'
     rarities:
     - Super Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1011526
 ---
 konami_id: 19429
@@ -118385,7 +118305,7 @@ yugipedia_page_id: 1005862
 ---
 konami_id: 19549
 name:
-  en: Ultimate Flag Beast Bolt Tricorn
+  en: Ultimate Flag Beast Boltricorn
   de:
   es:
   fr:
@@ -118413,7 +118333,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of your opponent's next turn.
+    1 face-down Spell/Trap Card on your opponent's field cannot be activated until the end of their next turn.
   de:
   es:
   fr:
@@ -118435,7 +118355,7 @@ series:
 - Ultimate Flag
 images:
 - index: 1
-  image: UltimateFlagBeastBoltTricorn-RDMRP2-JP-R.png
+  image: UltimateFlagBeastBoltricorn-RDMRP2-JP-R.png
 sets:
   ja:
   - set_number: RD/MRP2-JP013
@@ -118449,11 +118369,6 @@ sets:
     rarities:
     - Rare
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1012486
 ---
 konami_id: 19550
@@ -119330,9 +119245,6 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Common
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 1013368
 ---
 konami_id: 19563
@@ -136657,7 +136569,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    The only monsters in your Graveyard are Cyberse Type.
+    The only monsters in your Graveyard are Cyberse monsters.
   de:
   es:
   fr:
@@ -136670,7 +136582,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 Cyberse Type monster with 0 DEF from among the cards sent to your hand.
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 Cyberse monster with 0 DEF from among the cards sent to your hand.
   de:
   es:
   fr:
@@ -136699,11 +136611,6 @@ sets:
     rarities:
     - Common
     - Secret Rare
-is_translation_unofficial:
-  name:
-    en: true
-  text:
-    en: true
 yugipedia_page_id: 1045997
 ---
 konami_id: 20095
